syntax = "proto3";

option java_multiple_files = true;
option java_package = "parts.device.akka.proto";

package device;

message CreateDevice {
  string deviceId = 1;
  string createPartId = 2;
}